chore: configure MongoDB properties in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=stepify-api
+
+#---------------------------------------------------------------------------------------------
+# mongo configs
+#---------------------------------------------------------------------------------------------
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=stepify
+#---------------------------------------------------------------------------------------------
+# end mongo configs
+#---------------------------------------------------------------------------------------------
