--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=stepify-api
+spring.application.name=task-service
 
 #---------------------------------------------------------------------------------------------
 # mongo configs
 #---------------------------------------------------------------------------------------------
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=stepify
+spring.data.mongodb.database=stepify-task
 #---------------------------------------------------------------------------------------------
 # end mongo configs
 #---------------------------------------------------------------------------------------------
