--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=task-service
 
+server.servlet.context-path=/tasks
+
 #---------------------------------------------------------------------------------------------
 # mongo configs
 #---------------------------------------------------------------------------------------------
